updated grid and fixed spacing

--- a/_includes/css/grid.css
+++ b/_includes/css/grid.css
@@ -106,23 +106,6 @@
 	}
 }
 
-/*@media only screen and (min-width: 35em) {
-	.unit-m2-1-3 {
-		width: 33.3333%;
-	}
-	
-	.unit-m2-1 {
-		width: 100%;
-	}
-	
-	.unit-m2-1-2 {
-		width: 50%;
-	}
-
-	.unit-m2-2-3 {
-		width: 66.6666%;
-	}
-}*/
 
 @media only screen and (min-width: 60em) {
 	.unit-l-1-3 {
